[project]
name = "instarepost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "instagrapi>=2.1.3",
    "moviepy==1.0.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "schedule>=1.2.2",
]
